fix: address the security, usability, maintainability and documentation review
Fixes the 31 findings from the review and adds a Playwright end-to-end suite
that holds them fixed. Each spec file names the problem it guards.

Security
- Lock user/group management to administrators. /api/users and /api/groups sat
  outside the only authorization rule (/admin/**), so any authenticated user
  could create and delete accounts and add themselves to the admins group.
- Bind version restores to their file. restoreFileVersion resolved the version
  id on its own, letting a user graft another user's stored object onto a file
  they own and read its contents.
- Enable CSRF protection. Split the filter chains: the UI uses form login with
  a session and CSRF tokens; /api/** is stateless HTTP Basic whose 401 carries
  no WWW-Authenticate challenge, so browsers never cache credentials for it and
  cannot be made to replay them cross-site.
- Stop serializing JPA entities from the user and group APIs. User exposed its
  bcrypt hash and the User/Group back-reference recursed until Jackson gave up
  (37KB for three users). Added response DTOs.
- Escape the version history dialog. It interpolated the modifier's user name
  into innerHTML; a crafted name executed script for whoever opened it. Names
  are now validated on input and rendered with textContent.
- Cascade soft delete and restore. Deleting a folder left its children "not
  deleted": absent from every listing and the trash, still downloadable by id,
  and never collected by the hard-delete job.
- Give administrators a read override, defined once in PermissionService, and
  route the hard-coded "admins" check in changeOwner through it.
- Validate file, folder, user and group names; keep the H2 console off by
  default and admin-only when on.
- Move every credential out of the repository into .env (see .env.example).

Correctness found while fixing the above
- Nobody could unlock a file they had locked: getLockedBy() returns a H